# find_package_example

./: README.md
bar/: CMakeLists.txt  bar.c  bar.h  barConfig.cmake
bar_user/: CMakeLists.txt  bar_user.c
foo/: CMakeLists.txt  foo.c  foo.h
foo_user/: CMakeLists.txt  foo_user.c
